--- a/style.css
+++ b/style.css
@@ -4,34 +4,59 @@ body, .image-sidebar {
     font-family: 'Yatra One', cursive;
     font-size: 16px;
     line-height: 1.3;
-    display: flex;
+    display:flex;
     align-items: center;
     margin:0;
+    background-color:rgb(248, 241, 231);
   }
 
   .page-columns{
     display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
+
   #first-column{
+    
     width:40%;
     height:100vh;
     background-image: url("patrick-slade-tuomgxdoIP4-unsplash.jpg");
     background-size: 100% 100%;
+    align-items: center;
 
-  }
-
-  #second-column{
-    height:100%;
-    width: 60%;
-    flex-direction: column;
   }
 
   .image-sidebar{
-    background-color: rgb(0,0,0,0.2);
+    height:fit-content;
     width: 100%;
     justify-content: center;
+    background-color: rgb(0, 0, 0, 0.2);
+  }
+
+  #second-column{
+    padding: 1.5rem;
+    height:100%;
+    width: 60%;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+  }
+
+
+  fieldset{
+    padding: 1.5rem;
+    display: flex;
+	  justify-content: flex-start;
+	  flex-direction: column;
+	  flex-wrap: wrap;
+    
+  }
+
+  fieldset input{
+    margin:0.5rem;
+  }
+
+  .form-section{
+    align-items: flex-start;
+    
   }
 
