--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@ body, .image-sidebar {
     align-items: center;
     margin:0;
     background-color:rgb(255, 250, 245);
-  }
+}
 
   .page-columns{
     display: flex;
   }
 
+/*First column*/
   #first-column{
     width:30%;
     height:100vh;
@@ -30,8 +31,16 @@ body, .image-sidebar {
     margin-top: 40%;
   }
 
+  /*Second column*/
+  .head-section, .heading, .login-text{
+    margin-left: 1.9rem;
+  }
+
+  .heading{
+    color:rgb(81, 81, 81);
+  }
+
   #second-column{
-    
     height:100%;
     width: 70%;
     flex-direction: column;
@@ -39,6 +48,10 @@ body, .image-sidebar {
     
   }
 
+  .form-section{
+    align-items: flex-start;
+    
+  }
 
   .form-field{
     background-color: white;
@@ -48,13 +61,23 @@ body, .image-sidebar {
     box-shadow: 5px 5px 5px lightgray;
   }
 
-
-
   input{
     border: 1px solid lightgrey;
-    margin: 0 0 0.7rem 0.5rem;
     font-size: 18px;
     border-radius:3px;
+    margin: 0 0 0.7rem 0.5rem;
+  }
+
+  #password{
+    margin-bottom: 0;
+  }
+
+  #error-message{
+    margin: 1px 0 0 0.6rem;
+    font-size: 12px;
+    color:red;
+    opacity: 0;
+
   }
 
   input:focus{
@@ -63,6 +86,16 @@ body, .image-sidebar {
 
   }
 
+  /*To remove the arrows from the telephone input field*/
+
+  /* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
   label{
     font-size: 0.9rem;
     font-weight: lighter;
@@ -70,19 +103,8 @@ body, .image-sidebar {
     padding-left: 0.5rem;
   }
 
-  .form-section{
-    align-items: flex-start;
-    
-  }
 
-  .head-section, .heading, .login-text{
-    margin-left: 1.9rem;
-  }
-
-  .heading{
-    color:rgb(81, 81, 81);
-  }
-
+  /*To style the button*/ 
   button {
     box-shadow:inset 0px 1px 0px 0px #fce2c1;
     background:linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
